; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_2html.c_do_op.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/src/extr_2html.c_do_op.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@do_op.opnames = internal global [44 x i8*] [i8* getelementptr inbounds ([1 x i8], [1 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.11, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.12, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.13, i32 0, i32 0), i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.14, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.15, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.16, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.17, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.18, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.19, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.20, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.21, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.22, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.23, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.24, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.25, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.26, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.27, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.28, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.29, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.30, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.31, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.32, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.33, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.34, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.35, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.36, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.37, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.38, i32 0, i32 0), i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.39, i32 0, i32 0), i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.40, i32 0, i32 0), i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.41, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.42, i32 0, i32 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.43, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [1 x i8] zeroinitializer, align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"CNST\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"ARG\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"ASGN\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"INDIR\00", align 1
@.str.5 = private unnamed_addr constant [4 x i8] c"CVC\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"CVD\00", align 1
@.str.7 = private unnamed_addr constant [4 x i8] c"CVF\00", align 1
@.str.8 = private unnamed_addr constant [4 x i8] c"CVI\00", align 1
@.str.9 = private unnamed_addr constant [4 x i8] c"CVP\00", align 1
@.str.10 = private unnamed_addr constant [4 x i8] c"CVS\00", align 1
@.str.11 = private unnamed_addr constant [4 x i8] c"CVU\00", align 1
@.str.12 = private unnamed_addr constant [4 x i8] c"NEG\00", align 1
@.str.13 = private unnamed_addr constant [5 x i8] c"CALL\00", align 1
@.str.14 = private unnamed_addr constant [7 x i8] c"*LOAD*\00", align 1
@.str.15 = private unnamed_addr constant [4 x i8] c"RET\00", align 1
@.str.16 = private unnamed_addr constant [6 x i8] c"ADDRG\00", align 1
@.str.17 = private unnamed_addr constant [6 x i8] c"ADDRF\00", align 1
@.str.18 = private unnamed_addr constant [6 x i8] c"ADDRL\00", align 1
@.str.19 = private unnamed_addr constant [4 x i8] c"ADD\00", align 1
@.str.20 = private unnamed_addr constant [4 x i8] c"SUB\00", align 1
@.str.21 = private unnamed_addr constant [4 x i8] c"LSH\00", align 1
@.str.22 = private unnamed_addr constant [4 x i8] c"MOD\00", align 1
@.str.23 = private unnamed_addr constant [4 x i8] c"RSH\00", align 1
@.str.24 = private unnamed_addr constant [5 x i8] c"BAND\00", align 1
@.str.25 = private unnamed_addr constant [5 x i8] c"BCOM\00", align 1
@.str.26 = private unnamed_addr constant [4 x i8] c"BOR\00", align 1
@.str.27 = private unnamed_addr constant [5 x i8] c"BXOR\00", align 1
@.str.28 = private unnamed_addr constant [4 x i8] c"DIV\00", align 1
@.str.29 = private unnamed_addr constant [4 x i8] c"MUL\00", align 1
@.str.30 = private unnamed_addr constant [3 x i8] c"EQ\00", align 1
@.str.31 = private unnamed_addr constant [3 x i8] c"GE\00", align 1
@.str.32 = private unnamed_addr constant [3 x i8] c"GT\00", align 1
@.str.33 = private unnamed_addr constant [3 x i8] c"LE\00", align 1
@.str.34 = private unnamed_addr constant [3 x i8] c"LT\00", align 1
@.str.35 = private unnamed_addr constant [3 x i8] c"NE\00", align 1
@.str.36 = private unnamed_addr constant [5 x i8] c"JUMP\00", align 1
@.str.37 = private unnamed_addr constant [6 x i8] c"LABEL\00", align 1
@.str.38 = private unnamed_addr constant [4 x i8] c"AND\00", align 1
@.str.39 = private unnamed_addr constant [4 x i8] c"NOT\00", align 1
@.str.40 = private unnamed_addr constant [3 x i8] c"OR\00", align 1
@.str.41 = private unnamed_addr constant [5 x i8] c"COND\00", align 1
@.str.42 = private unnamed_addr constant [6 x i8] c"RIGHT\00", align 1
@.str.43 = private unnamed_addr constant [6 x i8] c"FIELD\00", align 1
@.str.44 = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@.str.45 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @do_op to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_op(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %4 = load i32, i32* %2, align 4
  %5 = call i32 @opindex(i32 %4)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* %3, align 4
  %7 = icmp slt i32 %6, 1
  br i1 %7, label %12, label %8

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = icmp uge i64 %10, 44
  br i1 %11, label %12, label %15

12:                                               ; preds = %8, %1
  %13 = load i32, i32* %2, align 4
  %14 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.44, i64 0, i64 0), i32 %13)
  br label %21

15:                                               ; preds = %8
  %16 = load i32, i32* %3, align 4
  %17 = sext i32 %16 to i64
  %18 = getelementptr inbounds [44 x i8*], [44 x i8*]* @do_op.opnames, i64 0, i64 %17
  %19 = load i8*, i8** %18, align 8
  %20 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.45, i64 0, i64 0), i8* %19)
  br label %21

21:                                               ; preds = %15, %12
  ret void
}

declare dso_local i32 @opindex(i32) #1

declare dso_local i32 @printf(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
